--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "spa"
     ],
     "require": {
-        "typo3/cms-core": "^13.4 || ^14.0"
+        "typo3/cms-core": "^13.4 || ^14.0",
+        "typo3/cms-lowlevel": "^13.4 || ^14.0"
     },
     "autoload": {
         "psr-4": {
